// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration helpers > makeEventFnSchema() > should add ack when no rest in base 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "x-input": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "items": false,
    "maxItems": 2,
    "minItems": 2,
    "prefixItems": [
      {
        "type": "string",
      },
      {
        "x-input": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "items": false,
          "maxItems": 1,
          "minItems": 1,
          "prefixItems": [
            {
              "type": "number",
            },
          ],
          "type": "array",
        },
        "x-kind": "function",
        "x-output": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
        },
      },
    ],
    "type": "array",
  },
  "x-kind": "function",
  "x-output": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
  },
}
`;

exports[`Integration helpers > makeEventFnSchema() > should simply use base when no ack 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "x-input": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "items": false,
    "maxItems": 1,
    "minItems": 1,
    "prefixItems": [
      {
        "type": "string",
      },
    ],
    "type": "array",
  },
  "x-kind": "function",
  "x-output": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
  },
}
`;

exports[`Integration helpers > makeEventFnSchema() > should use overloads when both rest and ack are present 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": [
    {
      "x-input": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "items": false,
        "maxItems": 2,
        "minItems": 2,
        "prefixItems": [
          {
            "type": "string",
          },
          {
            "x-input": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
              "items": false,
              "maxItems": 1,
              "minItems": 1,
              "prefixItems": [
                {
                  "type": "number",
                },
              ],
              "type": "array",
            },
            "x-kind": "function",
            "x-output": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
            },
          },
        ],
        "type": "array",
      },
      "x-kind": "function",
      "x-output": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
      },
    },
    {
      "x-input": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "items": false,
        "maxItems": 3,
        "minItems": 3,
        "prefixItems": [
          {
            "type": "string",
          },
          {
            "description": "rest1",
          },
          {
            "x-input": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
              "items": false,
              "maxItems": 1,
              "minItems": 1,
              "prefixItems": [
                {
                  "type": "number",
                },
              ],
              "type": "array",
            },
            "x-kind": "function",
            "x-output": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
            },
          },
        ],
        "type": "array",
      },
      "x-kind": "function",
      "x-output": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
      },
    },
  ],
}
`;
